ImageSpan should have overflow hidden to prevent selection background from overflowing

--- a/src/ui/ImageSpan.css
+++ b/src/ui/ImageSpan.css
@@ -1,6 +1,7 @@
 .root {
   background-repeat: no-repeat;
   display: inline-block;
+  overflow: hidden;
   cursor: pointer;
 }
 
